# oit-ds-tools-prefect

./: .gitignore  README.md  README.rst  setup.cfg
.github/workflows/: docs.yml
docs/source/: conf.py  index.rst  task_autodoc.py
integration_tests/: test_graphql.py  test_rest.py
oit_ds_prefect_tools/: database.py  graphql.py  object_storage.py  object_store.py  rest.py  sftp.py  util.py
ucb_prefect_tools/: comparer.py  data_archive.py  database.py  graphql.py  object_storage.py  onedrive.py  r.py  r_model.py  rest.py  rpy2.py  task_runners.py  util.py  validation.py
ucb_prefect_tools/tests/: test_comparer.py  test_data_archive.py
