[metadata]
name = oit_ds_prefect_tools
version = 1.0.10
author = James Ashby
author_email = james.ashby@colorado.edu
description = Tasks and tools for implementing Prefect data flows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UCBoulder/oit-ds-prefect-tools
project_urls =
    Bug Tracker = https://github.com/UCBoulder/oit-ds-prefect-tools/issues
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
install_requires =
    prefect[github]
    cx_Oracle
    pandas
    pyarrow
    minio
    pysftp
    gitpython
    boto3
