[metadata]
name = ucb_prefect_tools
version = 6.2.0
author = James Ashby
author_email = james.ashby@colorado.edu
description = Tasks and tools for implementing Prefect data flows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UCBoulder/oit-ds-tools-prefect
project_urls =
    Bug Tracker = https://github.com/UCBoulder/oit-ds-tools-prefect/issues
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.10
install_requires =
    boto3
    gitpython
    minio
    mysql-connector-python
    oracledb < 2.0
    pandas < 2.0
    paramiko
    prefect
    prefect-aws
    psycopg2-binary
    pyarrow
    pyodbc
    pysmb
    pytz
    s3fs
    snowflake-connector-python
